# gsb-scale-codec

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  publish.yml  release-bot.yml
benches/: benches.rs
derive/: Cargo.toml
derive/src/: decode.rs  encode.rs  lib.rs  max_encoded_len.rs  trait_bounds.rs  utils.rs
fuzzer/: Cargo.toml  README.md
fuzzer/src/: main.rs
src/: bit_vec.rs  btree_utils.rs  codec.rs  compact.rs  const_encoded_len.rs  counted_input.rs  decode_all.rs  decode_finished.rs  depth_limit.rs  encode_append.rs  encode_like.rs  error.rs  generic_array.rs  joiner.rs  keyedvec.rs  lib.rs  max_encoded_len.rs  mem_tracking.rs
tests/: bitflags.rs  bounds.rs  chain-error.rs  clippy.rs  decode_with_mem_tracking_ui.rs  max_encoded_len.rs  max_encoded_len_ui.rs  mem_tracking.rs  mod.rs  scale_codec_ui.rs  single_field_struct_encoding.rs  size_hint.rs  skip.rs  type_inference.rs  variant_number.rs
tests/decode_with_mem_tracking_ui/: trait_bound_not_satisfied.rs
tests/max_encoded_len_ui/: crate_str.rs  crate_str.stderr  incomplete_attr.rs  incomplete_attr.stderr  missing_crate_specifier.rs  missing_crate_specifier.stderr  not_encode.rs  not_encode.stderr  not_mel.rs  union.rs  unsupported_variant.rs
tests/max_encoded_len_ui/pass/: codec_crate.rs
tests/scale_codec_ui/: codec_discriminiant_variant_counted_in_default_index.rs  codec_discriminiant_variant_counted_in_default_index.stderr  codec_duplicate_index.rs  codec_duplicate_index.stderr
tests/scale_codec_ui/pass/: decode-no-implicit-prelude.rs  (+1 more)
