[package]
name = "codec-fuzzer"
version = "0.1.0"
authors = ["Gsb Technologies <admin@gsb.io>", "Vincent Ulitzsch <vincent@srlabs.de>"]
edition = "2021"
rust-version = "1.56.1"
publish = false

[dependencies]
gsb-scale-codec = { path = "..", features = ["derive", "bit-vec", "fuzz"] }
honggfuzz = "0.5.56"
arbitrary = { version = "1.4.1", features = ["derive"] }
bitvec = { version = "1", features = ["alloc"] }
